# bob

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  ARCHREVIEW.md  CHANGELOG.md  COMPLETION_REPORT.md  DESIGN.md  DOCS.yaml  OPENCLAW-INTEGRATION.md  OPENCLAW_PLUGIN_PLAN.md  PROGRESS.md  PROMPT.md  README.md  SMOKETESTER.md  SUMMARY.md  backup.sh  debug_hang.py  improved-autonomy-rapid.md  improved-autonomy.md  openclaw-agent-guide.md  persona-plan.md  project-autonomy.md  prompt_examples.md  pyproject.toml  test_timeout.py
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
cyborg/: __init__.py  cli.py  config.py  database.py  dependencies.py  exceptions.py  main.py  models.py  structured_logging.py
cyborg-context/: README.md  index.ts
cyborg/routers/: __init__.py  calendars.py  contacts.py  context.py  dashboard.py  health.py  learning.py  notifications.py  openclaw.py  planning.py  plans.py  project_specs.py  projects.py  session_routes.py  tasks.py  webhooks.py
cyborg/schemas/: 10_tasks.sql  110_task_results.sql  180_prompt_history.sql  200_notification_task_retry.sql  20_projects.sql  225_submission_review_otp.sql  240_task_deprecated_status.sql  50_self_executing_projects.sql  80_contacts.sql
cyborg/services/: __init__.py  base.py  calendar_service.py  context_builder.py  health_monitor_service.py  learning_service.py  notification_service.py  openclaw_hook_service.py  openclaw_reasoning_service.py  plan_service.py  project_autonomy_service.py  project_execution_service.py  project_service.py  project_spec_service.py  prompt_history.py  session_route_service.py  source_discovery_service.py  task_service.py  webhook_service.py
docs/: ai-news-brief-journal.md  architecture.md  bob-prose.md  datamodel.md  memory.md  outreach.md  patience.md  session-mess.md  skills.md  smoke-test-guide.md  webhooks.md
memory-3/: bulletin-gen-spec.md  claimtypes.md  spec.md
openclaw-plugin/: README.md  SKILL.md  index.ts  openclaw.plugin.json  package.json
openclaw-skill/: SKILL.md  pyproject.toml
scripts/: patch-openclaw-active-listener.sh  rollout.sh
services/whatsappbridge/: Makefile  go.mod  go.sum
tests/: conftest.py  test_api.py  test_autonomy_e2e.py  test_cli.py  test_config.py  test_context_builder.py  test_openclaw_reasoning.py  test_project_autonomy.py  test_project_execution.py  test_prompt_history.py  test_webhooks.py
tests/mocks/: mock_llm_service.py
(+37 files in other folders)
