[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "cyborg"
version = "0.1.0"
description = "SQLite-backed HTTP data service for Bob"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "OpenClaw" },
]
dependencies = [
  "aiosqlite>=0.20.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "python-jose>=3.3.0",
  "typer>=0.16.0",
  "uvicorn>=0.35.0",
  "websockets>=15.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
cyborg = "cyborg.cli:app"

[tool.hatch.build]
include = [
  "cyborg/**/*.py",
  "cyborg/**/*.sql",
  "README.md",
  "docs/**/*.md",
  "tests/**/*.py",
]

[tool.hatch.build.targets.wheel]
packages = ["cyborg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
