[project]
name = "cyborg-workspace"
version = "0.0.0"
description = "Development workspace for Cyborg packages"
requires-python = ">=3.12"
dependencies = [
  "cyborg-server",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.uv.sources]
cyborg-server = { path = "packages/cyborg-server", editable = true }

[tool.hatch.build.targets.wheel]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "openclaw_live: exercises a real OpenClaw gateway/model and is skipped by default",
  "asyncio: marks coroutine-style tests that require explicit async support",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
]
